@@ -365,7 +365,7 @@ is off by default. This option must appear before the first file name.
 \fB--etags-include\fP=\fIfile\fP
 Include a reference to \fIfile\fP in the tag file. This option may be
 specified as many times as desired. This supports Emacs' capability to use a
-tag file which "includes" other tag files. [Used only in etags mode]
+tag file which "includes" other tag files. [Available only in etags mode]
 
 .TP 5
 \fB--exclude\fP=[\fIpattern\fP]
